try to fix mime-type issue

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<base href="/">
+
 ---
 layout: default
 ---
@@ -14,3 +16,4 @@ layout: default
 {% include activities.html %}
 
 {% include teaching.html %}
+
